--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
         "start": "next start",
         "lint": "next lint",
         "generate": "npx prisma generate",
-        "db:push": "npx prisma db push"
+        "db:push": "npx prisma db push",
+        "postinstall": "prisma generate"
     },
     "dependencies": {
         "@auth/prisma-adapter": "^1.5.2",
